codebase/helm-chart/minikube/yaml/authz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authz-deployment
spec:
  selector:
    matchLabels:
      app: authz
  template:
    metadata:
      labels:
        app: authz
    spec:
      containers:
        - name: authz
          image: authz:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "300Mi"
            limits:
              memory: "500Mi"
          ports:
            - containerPort: 2631
---
apiVersion: v1
kind: Service
metadata:
  name: authz-service
spec:
  type: ClusterIP
  selector:
    app: authz
  ports:
    - name: http
      protocol: "TCP"
      port: 2631
      targetPort: 2631
    - name: grpc
      port: 3631
      targetPort: 3631
      protocol: "TCP"
